fixed z-index on first child

--- a/style.scss
+++ b/style.scss
@@ -13,7 +13,7 @@
       display: flex;
       align-items: end;
 
-      transition: 300ms;
+      transition: 3000ms;
       border-radius: 0.25rem;
       height: 200px;
       padding: 20px;
@@ -281,8 +281,6 @@
 }
 
 .turn-left {
-  z-index: 5;
-
   .wrapper-for-stacked-turn {
     transform: rotate(-3deg);
     // transform: translateY(2%) scaleX(0.95);
@@ -294,4 +292,8 @@
     transform: rotate(-6deg);
     // transform: translateY(4%) scaleX(0.9);
   }
+}
+
+.higher-z-index {
+  z-index: 5;
 }
